# outlet_monitor

./: .dockerignore  .env.prod.example  .gitignore  Dockerfile  PLAN.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
deploy/: nginx-outlet-monitor.conf
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alertas/: page.tsx
frontend/src/app/api/categories/: route.ts
frontend/src/app/api/products/: route.ts
frontend/src/app/api/products/[id]/history/: route.ts
frontend/src/app/api/scrape/: route.ts
frontend/src/components/: CategoryTabs.tsx  PriceHistoryChart.tsx  PriceRangeGrid.tsx  ProductCard.tsx  ProductCarousel.tsx  ProductDetail.tsx  ProductsTable.tsx  ScrapeButton.tsx  SiteHeader.tsx  SpecsTable.tsx  StatTile.tsx
frontend/src/lib/: api.ts  apiProxy.ts  categoryStyles.ts  format.ts  priceRange.ts  telegram.ts  types.ts
scripts/: seed_db.py
src/outlet_monitor/: api.py  models.py  notify.py  scrape.py  storage.py
telegram_notifier/: .dockerignore  Dockerfile  README.md  requirements.txt
telegram_notifier/app/: bot.py  broadcast.py  main.py  report.py  schemas.py  store.py
tests/: test_api.py  test_notify.py  test_scrape.py  test_storage.py
